syntax = "proto3";

package com.rafsan.virus;

option java_package="com.rafsan.virus";
option java_multiple_files = true;

service VirusService{
    rpc getVirus(VirusRequest) returns (VirusResponse);
}

message VirusRequest{
    int32 id = 1;
}

message VirusResponse{
    int32 id = 1;
    string name = 2;
}